# kitdev

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_ZH.md
examples/: devkit-sync-test.toml  devkit.toml
src/: cleanup.rs  cli.rs  config.rs  doctor.rs  i18n.rs  init.rs  init_tui.rs  install.rs  latest.rs  main.rs  output.rs  package_manager.rs  platform.rs  shell.rs  sync.rs  tool_command.rs  upgrade.rs
