[package]
name = "devkit"
version = "0.1.0"
edition = "2024"
description = "Personal and team development toolchain health CLI"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
which = "8.0.0"
